feat(game): implement turn-based player action tracking
- Add currentPlayerIndex to track whose turn it is
- Add playersActedThisRound set to track betting round completion
- Add getCurrentPlayer() method to get active player
- Add setters for state persistence and restoration
- Persist turn tracking state in database
- Load and restore turn state from database
- Track all player bets in betting round for state reconstruction